loan working fine: looking at initialization